[package]
name = "assert_tv"
version = "0.4.0"
edition = "2021"
authors = ["Amin Faez <faez@utilacy.de>"]

[features]
default = ["tls"]
enabled = ["serde_yaml", "log"]
tls = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = false }
serde_json = { version = "1.0", optional = false }
log = { version = "0.4", optional = true }
anyhow = "1.0"
serde_yaml = {  version = "0.9", optional = true }
