[package]
name = "assert_tv"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["tls"]
enabled = ["serde_yaml", "log"]
tls = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = false }
serde_json = { version = "1.0", optional = false }
log = { version = "0.4", optional = true }
anyhow = "1.0"
serde_yaml = { version = "0.9", optional = true }
