[package]
name = "assert_tv_macros"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
assert_tv = { path = "../assert_tv", version = "0.5.2" }
proc-macro2 = "1.0.93"
