[package]
name = "example"
version = "0.2.2"
edition = "2021"

[features]
default = []
tv = []

[dependencies]
assert_tv = { path = "../assert_tv" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9"
anyhow = "1.0"


[dev-dependencies]
assert_tv = {  path = "../assert_tv" , default-features = false, features = ["enabled"] }
assert_tv_macros = { path = "../assert_tv_macros" }