[package]
name = "example"
version = "0.2.2"
edition = "2021"

[features]
default = []

[dependencies]
assert_tv = { path = "../assert_tv" }
rand = "0.9.0"
anyhow = "1.0.95"
serde_json = "1.0.138"


[dev-dependencies]
assert_tv = {  path = "../assert_tv"  }
assert_tv_macros = { path = "../assert_tv_macros" }